--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,11 +1,85 @@
-* {
+@import url('https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400;0,700;1,400;1,700&family=Josefin+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
+
+*,
+*::after,
+*::before {
   box-sizing: border-box;
-  margin: 0 auto;
+  margin: 0;
   padding: 0;
 }
 
 #root {
   max-width: 1280px;
+  --type-fst: 'Josefin Sans', sans-serif;
+  --type-scd: 'Cabin', sans-serif;
+  --type-trd: Helvetica, Arial, sans-serif;
+  --type-title: Georgia, 'Times New Roman', Times, serif;
+  --color: #dc143c;
+  --color-shadow: rgba(255, 155, 255, 0.5);
+  --color-light: #db5670;
+  --color-dark: #8f0d27;
+  --color-disabled: #dc78a0;
+  margin: 0 auto;
 }
 
+body {
+  padding-top: 4rem;
+  color: #333
+}
 
+h1,
+h2 {
+  font-family: var(--type-title);
+}
+
+a {
+  text-decoration: none;
+}
+
+ul,
+li {
+  list-style: none;
+}
+
+.App {
+  display: flex;
+  flex-direction: column;
+  min-height: calc(100vh - 4rem);
+  max-width: 120rem;
+  padding: 0 1rem;
+
+  & > main {
+    flex: 1;
+  }
+}
+
+.errorContainer {
+  height: 2rem;
+}
+
+.error {
+  font-size: 1rem;
+  color: var(--color);
+}
+
+.title {
+  font-family: var(--type-second);
+  line-height: 1;
+  font-size: 2.5rem;
+  margin: 1rem 0;
+  position: relative;
+  z-index: 1;
+
+  &::after {
+    content: '';
+    display: block;
+    width: 1.5rem;
+    height: 1.5rem;
+    background: var(--color-light);
+    position: absolute;
+    bottom: 0px;
+    left: -5px;
+    border-radius: 0.2rem;
+    z-index: -1;
+  }
+}
