--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -9,7 +9,7 @@
 }
 
 #root {
-  max-width: 1280px;
+  max-width: 120rem;
   --type-fst: 'Josefin Sans', sans-serif;
   --type-scd: 'Cabin', sans-serif;
   --type-trd: Helvetica, Arial, sans-serif;
@@ -24,7 +24,10 @@
 
 body {
   padding-top: 4rem;
-  color: #333
+  /* min-height: calc(100vh + 1px); */
+  color: #333;
+  scrollbar-width: thin;
+  scrollbar-color: crimson transparent;
 }
 
 h1,
@@ -44,7 +47,7 @@ li {
 .App {
   display: flex;
   flex-direction: column;
-  min-height: calc(100vh - 4rem);
+  min-height: calc(100vh - 4rem + 0.5px);
   max-width: 120rem;
   padding: 0 1rem;
 
@@ -73,13 +76,25 @@ li {
   &::after {
     content: '';
     display: block;
-    width: 1.5rem;
-    height: 1.5rem;
-    background: var(--color-light);
+    width: 0.75rem;
+    height: 0.75rem;
+    background: #DC143C;
     position: absolute;
     bottom: 0px;
     left: -5px;
     border-radius: 0.2rem;
     z-index: -1;
   }
+}
+
+body::-webkit-scrollbar {
+  width: 4px;  
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: crimson;  
+}
+
+body::-webkit-scrollbar-track {
+  background-color: transparent; 
 }
